[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Enemies/EnemyWalking.gd" type="Script" id=2]
[ext_resource path="res://assets/AnimationFrames/goryo.tres" type="SpriteFrames" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.1499
height = 41.35

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 34.4239 )

[node name="Goryo" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -1, 13 )
shape = SubResource( 1 )

[node name="Detector" parent="." index="3" groups=[
"stompables",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector" index="0"]
position = Vector2( 0, -44 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="5"]
[connection signal="died" from="." to="." method="_on_Goryo_died"]
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
